bubbleSortShehan.com Comments

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <h1>Bubble Sort</h1>
-
+        <!-- designed by Shehan -->
         <div id="congrats-layer" class="hidden">
             <h2 class="congrats-text"> Congratulations! </h2>
             <p>The array is fully sorted!</p>
